# backend/internal/dto/post_response.go
@@ -35,12 +35,35 @@ type CreatePostResponse struct {
 	PostPublic
 }
 
-type ReadPostsResponse struct {
-	Meta		PostMetadataObject	`json:"meta"`
-	Data 		[]CommonPostObject	`json:"data"`
+type ListPostsPagination struct {
+	Page			int			`json:"page"`
+	PageLimit		int			`json:"pageLimit"`
+	Total			int			`json:"total"`
+	TotalPages		int			`json:"totalPages"`
+	HasNextPage		bool		`json:"hasNextPage"`
+	HasPrevPage		bool		`json:"hasPrevPage"`
+}
+type ListPostsFilter struct {
+	ID				*int		`form:"id"`
+	AccountID 		*string		`form:"accountId"`
+	Slug   	    	*string    	`form:"slug"`
+	Title    		*string    	`form:"title"`
+	CategoryID  	*int16     	`form:"categoryId"`
+	TagSlugs		[]string	`form:"tagSlugs"`
+	IsPrivate   	*bool      	`form:"isPrivate"`
+}
+type ListPostsMetaData struct {
+	Pagination		ListPostsPagination		`json:"pagination"`
+	Sort			SortMeta				`json:"sort"`
+	Filter			ListPostsFilter			`json:"filter"`
+}
+type ListPostsResponse struct {
+	Meta	ListPostsMetaData	`json:"meta"`
+	Datas	[]*PostPublic		`json:"data"`
 }
 
-type ReadEachPostResponse struct {
+
+type ReadPostResponse struct {
 	ID				int32		`json:"id"`
 	Slug			string		`json:"slug"`
 	Title			string		`json:"title"`
@@ -55,35 +78,4 @@ type ReadEachPostResponse struct {
 type UpdatedPostResponse struct {
 	Data		CreatePostResponse	`json:"data"`
 	Diff		CommonUpdateDiff	`json:"diff"`
-}
-
-type PostMetadataObject struct {
-	Pagination		struct {
-		Page		int32		`json:"page"`
-		PageSize	int32		`json:"page_size"`
-		Total		int32		`json:"total"`
-		TotalPages	int32		`json:"total_pages"`
-		HasNextPage	bool		`json:"has_nextpage"`
-		HasPrevPage bool		`json:"has_prevpage"`
-	}	`json:"pagination"`
-	Sort			struct {
-		SortBy		string		`json:"by"`
-		SortDir		string		`json:"desc"`
-	}	`json:"sort"`
-	Filters			struct {
-		Search		string		`json:"search"`
-		CategorySlug	string	`json:"category_slug"`
-		TagSlugs		[]string	`json:"tag_slugs"`
-	}	`json:"filters"`
-}
-
-type CommonPostObject struct {
-	ID				int32		`json:"id"`
-	Slug			string		`json:"slug"`
-	Title			string		`json:"title"`
-	Excerpt			string		`json:"excerpt"`
-	Thumbnail		string		`json:"thumbnail"`
-	CreatedAt		time.Time	`json:"created_at"`
-	CategoryID		CategoryPublic	`json:"category"`
-	TagID			[]ReadTagsResponse		`json:"tags"`
 }
